--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,11 @@ body {
     background-color: var(--primary-background-color);
     font-family: Roboto, sans-serif;
 }
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
 
 .container {
     width: 1200px;
@@ -26,72 +31,11 @@ body {
     margin-left: auto;
     margin-right: auto;
 }
-.logo {
-    color: var(--additional-primary-text-color);
-    font-family: Raleway, sans-serif;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
-    text-decoration: none;
-    letter-spacing: 0.03em;
-    
-}
-.logo-accent {
-    color: var(--accent);
-}
+
 .list {
     list-style: none;
     padding: 0;
     margin: 0;
-}
-.button-studio {
-    display: inline-block;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    border-width: 0;
-    min-width: 200px;
-    padding: 10px 32px;
-    margin-top: 0;
-    margin-bottom: 0;
-
-    color: var(--primary-button-color);
-    background-color: var(--accent);
-   
-    font-family: inherit;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.88;
-    text-align: center;
-    letter-spacing: 0.06em;
-    cursor: pointer;
-}
-.button-studio:hover,
-.button-studio:focus {
-    color: var(--primary-button-color);
-    background-color: var(--secondary-accent);
-}
-
-.button-portfolio {
-    padding: 6px 22px;
-    border-radius: 4px;
-    border-width: 0;
-
-    color: var(--additional-primary-text-color);
-    background-color: var(--button-bg-color);
-
-    font-family: inherit;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.62;
-    letter-spacing: 0.03em; 
-    cursor: pointer;
-}
-.button-portfolio:hover,
-.button-portfolio:focus {
-    color: var(--primary-button-color);
-    background-color: var(--accent);
-
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .section {
     padding-top: 94px;
@@ -125,15 +69,13 @@ body {
     clip: rect(0 0 0 0);
     overflow: hidden;
 }
-img {
-    display: block;
-    max-width: 100%;
-    height: auto;
-}
 
 /* Шапка сайта */
 .page-header {
     border-bottom: 1px solid #ECECEC;;
+}
+.no-border {
+    border: none;
 }
 .header-container {
     display: flex;
@@ -143,14 +85,33 @@ img {
 .main-nav {
     margin-left: 93px;
 }
+
+.logo {
+    color: var(--additional-primary-text-color);
+
+    font-family: Raleway, sans-serif;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    text-decoration: none;
+    letter-spacing: 0.03em;
+
+}
+
+.logo-accent {
+    color: var(--accent);
+}
 .site-nav {
     display: flex;
 }
 .site-nav-item:not(:last-child) {
     margin-right: 50px;
 }
+.site-nav-item {
+    position: relative;
+}
 
-.site-nav .link {
+.site-nav-link {
     display: block;
     padding-top: 32px;
     padding-bottom: 32px;
@@ -162,39 +123,54 @@ img {
     line-height: 1.14;
     letter-spacing: 0.02em;
     text-decoration: none;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.site-nav .link:hover,
-.site-nav .link:focus {
+.site-nav-link:hover,
+.site-nav-link:focus {
     color: var(--accent);
 }
-.site-nav .link.current {
-    color: var(--accent);
+.site-nav-link.current::after {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+    content: '';
+    display: inline-block;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+
+    background-color: var(--accent);
 }
 .contact-nav {
     display: flex;
     margin-left: auto;
 }
-.contact-nav-item .link {
+.contact-nav-link {
     display: flex;
     align-items: center;
 }
 .contact-nav-item:not(:last-child) {
     margin-right: 50px;
 }
-.contact-nav .link {
+.contact-nav-link {
     color: inherit;
+
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
     text-decoration: none;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .link-icon {
     margin-right: 10px;
     fill: currentColor;
 }
-.contact-nav .link:hover,
-.contact-nav .link:focus {
+.contact-nav-link:hover,
+.contact-nav-link:focus {
     color: var(--accent);
 }
 
@@ -234,6 +210,78 @@ img {
     text-transform: uppercase;
 
 }
+.button-studio {
+    display: inline-block;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border-width: 0;
+    min-width: 200px;
+    padding: 10px 32px;
+    margin-top: 0;
+    margin-bottom: 0;
+
+    color: var(--primary-button-color);
+    background-color: var(--accent);
+
+    font-family: inherit;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    text-align: center;
+    letter-spacing: 0.06em;
+    cursor: pointer;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-studio:hover,
+.button-studio:focus {
+    color: var(--primary-button-color);
+    background-color: var(--secondary-accent);
+}
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    background-color: rgba(0, 0, 0, 0.1);
+}
+.backdrop.is-hidden {
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
+}
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    min-width: 528px;
+    min-height: 581px;
+
+    background-color: var(--primary-background-color);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+}
+.close-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 8px;
+    margin-right: 8px;
+    margin-left: auto;
+    width: 30px;
+    height: 30px;
+
+    fill: #000000;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+
+    cursor: pointer;
+}
+ 
 /* Особенности */
 .features-list {
     display: flex;
@@ -282,6 +330,29 @@ img {
 }
 .work-list-item:not(:last-child) {
     margin-right: 30px;
+}
+.thumb {
+    position: relative;
+}
+.work-item-text {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+
+    margin: 0;
+    padding-top: 27px;
+    padding-bottom: 27px;
+
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+            
+    color: var(--additional-secondary-text-color);
+    background-color: rgba(47, 48, 58, 0.8);
 }
 /* Наша команда */
 .team {
@@ -337,14 +408,18 @@ img {
     align-items: center;
     width: 44px;
     height: 44px;
+    border-radius: 50%;
 
     fill: var(--icon-fill-color);
+    background-color: var(--team-background-color);
+    
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 .social-link:hover,
 .social-link:focus {
-    border-radius: 50%;
-    background-color: var(--accent);
     fill: var(--additional-secondary-text-color);
+    background-color: var(--accent);
 }
 .client-list {
     display: flex;
@@ -358,10 +433,14 @@ img {
     align-items: center;
     width: 170px;
     height: 92px;
-    border: 1px solid var(--icon-fill-color);
+    border-width: 1px;
+    border-style: solid;
+    border-color: var(--icon-fill-color);
     border-radius: 4px;
 
     fill: var(--icon-fill-color);
+
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .client-link:hover,
 .client-link:focus {
@@ -398,6 +477,8 @@ img {
     font-size: 14px;
     line-height: 1.71;
     text-decoration: none;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address-nav > .item {
     margin-top: 0;
@@ -421,13 +502,13 @@ img {
     margin-top: 0;
     margin-bottom: 20px;
 
-    color: var(--additional-secondary-text-color);
-
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+
+    color: var(--additional-secondary-text-color);
 }
 .join-list {
     display: flex;
@@ -447,11 +528,12 @@ img {
     
     background-color: #43444D;
     fill: var(--additional-secondary-text-color);
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .join-link:hover,
 .join-link:focus {
-    border-radius: 50%;
     background-color: var(--accent);
 }
 /* Страница Портфолио */
@@ -465,6 +547,32 @@ img {
 .button-item:not(:last-child) {
     margin-right: 8px;
 }
+.button-portfolio {
+    padding: 6px 22px;
+    border-radius: 4px;
+    border-width: 0;
+    box-shadow: none;
+
+    font-family: inherit;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.62;
+    letter-spacing: 0.03em;
+    cursor: pointer;
+
+    color: var(--additional-primary-text-color);
+    background-color: var(--button-bg-color);
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-portfolio:hover,
+.button-portfolio:focus {
+    color: var(--primary-button-color);
+    background-color: var(--accent);
+
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
 .portfolio-list {
     display: flex;
     flex-wrap: wrap;
@@ -475,18 +583,45 @@ img {
 
     background-color: var(--primary-background-color);
 }
+.portfolio-list-link {
+    box-shadow: none;
 
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .portfolio-list .link:hover,
 .portfolio-list .link:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
+.overlay {
+    position: relative;
+    overflow: hidden;
+}
+.portfolio-text {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    opacity: 0;
+    transform: translateY(0%);
+    
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-.portfolio-picture {
-    display: block;
-    margin-top: 0;
-    margin-bottom: 0;
+    margin: 0;
+    padding: 63px 24px;
+    font-size: 18px;
+    line-height: 1.56;
+    letter-spacing: 0.03em;
+    
+    color: var(--additional-secondary-text-color);
+    background-color: rgba(33, 150, 243, 0.9);
+}
+.portfolio-list .link:hover .portfolio-text {
+    opacity: 1;
+    transform: translateY(-100%);
+
 }
 .portfolio-container {
+    position: relative;
     padding: 20px 24px;
     border: 1px solid #EEEEEE;
     border-top: none;
@@ -499,20 +634,20 @@ img {
     margin-top: 0;
     margin-bottom: 4px;
 
-    color: var(--additional-primary-text-color);
-
     font-weight: 700;
     font-size: 18px;
     line-height: 2.00;
     letter-spacing: 0.06em;
+
+    color: var(--additional-primary-text-color);
 }
 .portfolio-description {
     margin-top: 0;
     margin-bottom: 0;
 
-    color: var(--primary-text-color);
-
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.03em;
+
+    color: var(--primary-text-color);
 }
