--- a/css/styles.css
+++ b/css/styles.css
@@ -246,7 +246,10 @@ img {
     width: 100%;
     height: 100%;
 
-    background-color: rgba(0, 0, 0, 0.1);
+    opacity: 1;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    background-color: rgba(0, 0, 0, 0.2);
 }
 .backdrop.is-hidden {
     visibility: hidden;
@@ -257,13 +260,18 @@ img {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     min-width: 528px;
     min-height: 581px;
 
     background-color: var(--primary-background-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
+
+    transform: translate(-50%, -50%) scale(1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.backdrop.is-hidden .modal {
+    transform: translate(-50%, -50%) scale(1.1);
 }
 .close-button {
     display: flex;
@@ -592,19 +600,19 @@ img {
 .portfolio-list .link:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
-.overlay {
+.portfolio-thumb {
     position: relative;
     overflow: hidden;
 }
-.portfolio-text {
+.portfolio-overlay {
     position: absolute;
     top: 100%;
     left: 0;
     width: 100%;
-    opacity: 0;
+    height: 100%;
     transform: translateY(0%);
     
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     margin: 0;
     padding: 63px 24px;
@@ -615,13 +623,12 @@ img {
     color: var(--additional-secondary-text-color);
     background-color: rgba(33, 150, 243, 0.9);
 }
-.portfolio-list .link:hover .portfolio-text {
-    opacity: 1;
+.portfolio-list .link:hover .portfolio-overlay,
+.portfolio-list .link:focus .portfolio-overlay {
     transform: translateY(-100%);
 
 }
 .portfolio-container {
-    position: relative;
     padding: 20px 24px;
     border: 1px solid #EEEEEE;
     border-top: none;
